@@ -85,6 +85,8 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 
 	Hetfield:
 		* New popup menu and events management for new wx SysTray
+		* Speed Bar color (on the new wxTray) is setted in the statistics color selection 
+		  (as old GTK tray!)
 
 	Kry:
 		* A lot
